--- a/Test Html/testUser.html
+++ b/Test Html/testUser.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1> Authentification</h1>
-        <form action="http://127.0.0.1:5000/auth" id="payment-form" autocomplete="on" method="POST">
+        <form action="https://smart-city-h4213.herokuapp.com/auth" id="payment-form" autocomplete="on" method="POST">
             Pseudo<input id="name" name="pseudo" type="text" class=""><br>
             pass <input name="passw">
 
