--- a/Test Html/JSON.html
+++ b/Test Html/JSON.html
@@ -19,7 +19,7 @@
 (function() {
   var flickerAPI = "https://smart-city-h4213.herokuapp.com/marker";
 
-  $.getJSON('http://0.0.0.0:5000/useer', function(data) {
+  $.getJSON('https://smart-city-h4213.herokuapp.com/useer', function(data) {
     alert(data)
     //data is the JSON string
 });
